--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -22,7 +22,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=⚙️ 节点选择`select`[]🔮 负载均衡`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=🔗 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔑 谷歌服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
