--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -10,8 +10,8 @@ ruleset=🔑 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=📺 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=▶️ 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=⚙️ 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -20,20 +20,20 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=⚙️ 节点选择`select`[]🔮 负载均衡`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🔗 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔑 谷歌服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=📺 油管视频`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=📲 电报信息`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]⚙️ 节点选择`[]🔗 自动选择`[]DIRECT
-custom_proxy_group=🍃 网络净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]🔗 自动选择`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🌏 亚洲负载`[]🌎 北美负载`[]DIRECT
+custom_proxy_group=🔑 谷歌服务`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🍎 苹果服务`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🎮 游戏平台`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=▶️ 油管视频`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=📺 国外媒体`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=📲 电报信息`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🍃 网络净化`select`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]DIRECT`[]🌏 亚洲负载`[]🌎 北美负载`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
+custom_proxy_group=🌏 亚洲负载`load-balance`(港|HK|Hong Kong|新加坡|坡|狮城|SG|Singapore|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌎 北美负载`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|加拿大|加|)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
