--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -2,6 +2,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍃 网络净化,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingMiTV/AdvertisingMiTV.list
 ruleset=🍃 网络净化,https://raw.githubusercontent.com/kukakukiki/SmartLink/main/AntiAD_01.list
+ruleset=🍃 网络净化,https://raw.githubusercontent.com/kukakukiki/SmartLink/main/AntiAD_02.list
 ;ruleset=🍃 网络净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ;ruleset=🍃 网络净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;ruleset=🍃 网络净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
