--- a/SmartLinkHome.ini
+++ b/SmartLinkHome.ini
@@ -24,8 +24,8 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`url-test`( 香港 0| 香港 1)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`( 日本 0| 日本 1)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`( 美国 0| 美国 1)`http://www.gstatic.com/generate_204`180,,100
-custom_proxy_group=🇭🇰 通用流量`url-test`( 香港 - IEPL - SS/SSR - | 台湾 - IEPL - SS/SSR - | 日本 - IEPL - SS/SSR - | 新加坡 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=🇺🇲 美国流量`url-test`( 美国 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,100
+custom_proxy_group=🇭🇰 通用流量`url-test`( 香港 - IEPL - Trojan - | 台湾 - IEPL - Trojan - | 日本 - IEPL - Trojan - | 新加坡 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=🇺🇲 美国流量`url-test`( 美国 - IEPL - Trojan - )`http://www.gstatic.com/generate_204`180,,100
 custom_proxy_group=✅ 手动切换`select`.*
 
 enable_rule_generator=true
