--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -7,14 +7,14 @@ ruleset=✅ 全球直连,[]GEOSITE,cn
 ruleset=✅ 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
 
-custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]📲 手动切换
-custom_proxy_group=🤖 人工智能`select`[]美国节点`[]通用节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
-custom_proxy_group=📽️ 国外媒体`select`[]美国节点`[]通用节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
-custom_proxy_group=🔝 兜底节点`select`[]通用节点`[]美国节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]☑️ 手动切换
+custom_proxy_group=🤖 人工智能`select`[]美国节点`[]通用节点`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=📽️ 国外媒体`select`[]美国节点`[]通用节点`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=🔝 兜底节点`select`[]通用节点`[]美国节点`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
 custom_proxy_group=✅ 全球直连`select`[]DIRECT
 custom_proxy_group=通用节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|新|SGP|Singapore)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=美国节点`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`180,,100
-custom_proxy_group=📲 手动切换`select`.*
+custom_proxy_group=☑️ 手动切换`select`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
