--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -4,8 +4,7 @@ ruleset=✅ 全球直连,[]GEOSITE,category-games@cn
 ruleset=🤖 人工智能,[]GEOSITE,category-ai-!cn
 ruleset=📽️ 国外媒体,[]GEOSITE,youtube
 ruleset=📽️ 国外媒体,[]GEOSITE,tiktok
-ruleset=📈 代理节点,[]GEOSITE,google
-ruleset=📈 代理节点,[]GEOSITE,microsoft
+ruleset=📈 代理节点,[]GEOSITE,google-play
 ruleset=📈 代理节点,[]GEOSITE,telegram
 ruleset=🔝 兜底节点,[]FINAL
 
