--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,11 +1,9 @@
 ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
-ruleset=✅ 全球直连,[]GEOSITE,category-games@cn
-ruleset=🤖 人工智能,[]GEOSITE,category-ai-!cn
-ruleset=📽️ 国外媒体,[]GEOSITE,youtube
-ruleset=📽️ 国外媒体,[]GEOSITE,tiktok
-ruleset=📈 代理节点,[]GEOSITE,google-play
-ruleset=📈 代理节点,[]GEOSITE,telegram
+ruleset=✅ 全球直连,[]GEOSITE,games-cn
+ruleset=🤖 人工智能,[]GEOSITE,ai
+ruleset=📽️ 国外媒体,[]GEOSITE,media
+ruleset=📈 代理节点,[]GEOSITE,tld-proxy
 ruleset=🔝 兜底节点,[]FINAL
 
 custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]☑️ 手动切换
