--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,7 +1,7 @@
 ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
 ruleset=✅ 全球直连,[]GEOSITE,games-cn
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/google-play.yaml
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/google-play.list
 ruleset=🤖 人工智能,[]GEOSITE,ai
 ruleset=📽️ 国外媒体,[]GEOSITE,media
 ruleset=📈 代理节点,[]GEOSITE,tld-proxy
